--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,227 @@
+@import url("//fonts.googleapis.com/css?family=Inter:300,400,500,600,700,800&amp;lang=en");
+
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: fit-content;
+  margin: 0px;
+  padding: 0px;
+  font-family: Inter;
+  background-color: #000000;
+  padding: 0px;
+  gap: 0px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html::-webkit-scrollbar {
+  display: none;
+}
+
+input,
+input::placeholder {
+  width: 100%;
+  font-family: Inter;
+  padding: 0px;
+  color: #b2b2b2;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::placeholder {
+  -webkit-appearance: none;
+  color: #ffffff;
+}
+
+button {
+  width: 100%;
+  height: fit-content;
+  padding: 15px;
+  justify-content: center;
+  align-items: center;
+  background-color: #5f98f5;
+  color: #ffffff;
+  font-weight: 800;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+}
+
+button:disabled {
+  background-color: #333333;
+  color: #565656;
+  cursor: not-allowed;
+}
+
+h1 {
+  margin: 0px;
+  color: #b2b2b2;
+  font-size: 14px;
+  font-weight: 700;
+  overflow-wrap: break-word;
+}
+
+.ActionButton {
+  box-sizing: border-box;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 6px;
+  gap: 6px;
+  color: #666666;
+  background-color: #1a1a1a;
+  border: 1px solid #252525;
+  border-radius: 10px;
+  font-weight: 600;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.connect-button {
+  width: fit-content;
+  padding: 10px;
+}
+
+.profile-button {
+  width: fit-content;
+  padding: 10px;
+  color: #b2b2b2;
+  background-color: #252525;
+  border: 1px solid rgba(64, 64, 64, 0.2);
+  transition: 150ms ease;
+}
+
+.profile-button:hover {
+  scale: 1.05;
+}
+
+.profile-button:active {
+  scale: 0.95;
+}
+
+.connector-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 8px;
+  gap: 6px;
+  background-color: transparent;
+  transition: 150ms ease;
+}
+
+.connector-button:hover {
+  background-color: #252525;
+}
+
+.chain-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 0px;
+  gap: 6px;
+  background-color: inherit;
+  color: #f55f5f;
+  transition: 150ms ease;
+}
+
+.chain-button:hover {
+  color: #ffffff;
+}
+
+.chain-button:active {
+  color: #b2b2b2;
+}
+
+.chain-button:disabled {
+  background-color: transparent;
+  color: #b2b2b2;
+}
+
+.close-button {
+  box-sizing: border-box;
+  width: 28px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #252525;
+  border: 1px solid rgba(64, 64, 64, 0.2);
+  border-radius: 100px;
+  cursor: pointer;
+  transition: 150ms ease;
+}
+
+.close-button:hover {
+  scale: 1.05;
+}
+.close-button:active {
+  scale: 0.95;
+}
+
+.overlay {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0px;
+  padding: 0px;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  z-index: 999;
+  transform: translateY(0);
+  animation: fadeIn 150ms ease;
+}
+
+.modal {
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  background-color: #1a1a1a;
+  border: 1px solid #252525;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  animation: slideUp 350ms cubic-bezier(0.15, 1.15, 0.6, 1), fadeIn 150ms ease;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  gap: 15px;
+}
+
+.modal-header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  color: #666666;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+@keyframes slideUp {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
